--- a/index.html
+++ b/index.html
@@ -189,12 +189,12 @@
 										<h2><a href="#">Weather Visualisation<br />
 								   </a></h2>
 									</header>
-									<a href="#" class="image fit"><img width="400" 
+									<a href="https://github.com/Ashlynbh/Web_Design_Project" class="image fit"><img width="400" 
 										height="400" width="400" 
 										height="400" src="images/weather2.png" alt="" /></a>
 									<p>A HTML dashboard that shows individual pages for each weather plot and a means by which we can navigate between them. The pages contain the visualisations and their corresponding explanations. There is also have a landing page, a page where we can see a comparison of all of the plots, and another page where we can view the data used to build them. </p>
 									<ul class="actions special">
-										<li><a href="#" class="button">View Project</a></li>
+										<li><a href="https://github.com/Ashlynbh/Web_Design_Project" class="button">View Project</a></li>
 									</ul>
 								</article>
 								<article>
@@ -259,7 +259,7 @@
 									</header>
 									<a href="https://github.com/Ashlynbh/SQL_Project" class="image fit"><img width="400" 
 										height="400"  src="images/HR.png" alt="" /></a>
-									<p>Using VBA scripting to analyse real stock market data.  </p>
+									<p>Importing employee data onto a SQL Database and performing queries.   </p>
 									<ul class="actions special">
 										<li><a href="https://github.com/Ashlynbh/SQL_Project" class="button">View Project</a></li>
 									</ul>
