--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
 										<h2><a href="#">Predicting Earthquake occurences along the California bullet train <br />
 									</a></h2>
 									</header>
-									<a href="https://github.com/Ashlynbh/Earthquake_Project" ><img src="images/earth1.webp"  width="500" 
-										height="350" alt="" /></a>
+									<a href="https://github.com/Ashlynbh/Earthquake_Project" class="image fit"><img src="images/earth1.webp"  width="500" 
+										height="400" alt="" /></a>
 									<p>An analysis of historic earthquake data from the USGS API. A review of historic data along the San Andreas fault to provide recommendations for engineers constructing the Californis bullet train</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/Ashlynbh/Earthquake_Project" class="button">View Project</a></li>
@@ -75,8 +75,8 @@
 										<h2><a href="#">Data cleaning and transformation in Python and SQL <br />
 								</a></h2>
 									</header>
-									<a href="https://github.com/Ashlynbh/ETL_Project" ><img src="images/dog3.jpg" width="500" 
-										height="350" alt="" /></a>
+									<a href="https://github.com/Ashlynbh/ETL_Project" class="image fit"><img src="images/dog3.jpg" width="500" 
+										height="400" alt="" /></a>
 									<p>Merging datasets on dog size and intelligence. Cleaning data and exporting from Python to SQL.</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/Ashlynbh/ETL_Project" class="button">View Project</a></li>
